--- a/css/index.css
+++ b/css/index.css
@@ -280,23 +280,27 @@ footer {
         border: 1px solid gray;
         display: flex;
         justify-content: center;
+        width: 100%;
     }
     .cta img {
       display: none;
+    }
+    .cta .cta-text {
+        margin: 5%;
     }
     .main-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 100%;
-        margin: 15% 20% 15% 10%;
-        padding: 2%;
+        width: 0 auto;
+        margin: 0 auto;
+        padding: 0 auto;
     }
     .top-content, .bottom-content {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         width: 100%;
+        margin: 0% 0% 0% 16%;
     }
     .text-content {
         line-height: 1.2;
@@ -304,17 +308,20 @@ footer {
         margin: none;
         font-size: 16px;
         /*border: 1px solid gray;*/
-        width: 85% !important;
+        width: 65% !important;
     }
     .middle-img {
-        width: 85% !important;
+        width: 65%;
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
     }
     .contact {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         width: 80%;
-        margin: 15% 20% 15% 10%;
-        padding: none;
+        margin: 2% 15% 2% 10%;
+        padding: 5% 15% 15% 15%;
     }
 }
